Fill brush in texture paint ignores alpha layer #57529

Closed
opened 2018-10-31 03:10:41 +01:00 by Warp Kaiba · 6 comments

System Information
Windows 10 64-bit
NVIDIA GeForce GTX 970

Blender Version
Broken: v2.79
Worked: Has not ever worked to my knowledge.

Short description of error
If using the fill bucket on an image with transparency, transparent pixels will be filled in if connected to a not-transparent pixel of similar color that is being filled.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Use the Fill tool in the UV/Image Editor to attempt to make the black ring in the packed image Circle.png a different color.

transparencybug.blend

**System Information** Windows 10 64-bit NVIDIA GeForce GTX 970 **Blender Version** Broken: v2.79 Worked: Has not ever worked to my knowledge. **Short description of error** If using the fill bucket on an image with transparency, transparent pixels will be filled in if connected to a not-transparent pixel of similar color that is being filled. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Use the Fill tool in the UV/Image Editor to attempt to make the black ring in the packed image Circle.png a different color. [transparencybug.blend](https://archive.blender.org/developer/F5304532/transparencybug.blend)
Author

Added subscriber: @MilesKitaro

Added subscriber: @MilesKitaro
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Member

Hm, while this is indeed a little unexpected, it might be more of a feature request [than a real bug]

from the manual:

Fill can be used to fill large areas of the image with the brush color. The tool fills adjacent pixels that have a color value similar to the pixel you clicked on.

so no promise here that it will respect alpha.

@brecht: do you think we should keeps this as TODO?

Hm, while this is indeed a little unexpected, it might be more of a feature request [than a real bug] from the manual: > Fill can be used to fill large areas of the image with the brush color. The tool fills adjacent pixels that have a color value similar to the pixel you clicked on. so no promise here that it will respect alpha. @brecht: do you think we should keeps this as TODO?

This issue was referenced by 1b974563b1

This issue was referenced by 1b974563b17b3a1ee02d81df952a66ecf66919c4

I would consider this a bug, also because it means the behavior for float (premultiplied) and byte (straight) images is inconsistent. The fix is simple though.

I would consider this a bug, also because it means the behavior for float (premultiplied) and byte (straight) images is inconsistent. The fix is simple though.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57529
No description provided.