Fix T57529: 2D image paint fill tool not taking into account alpha.